Fixed the issues with vertical alignment of color swatch text

--- a/app/css/less/page.less
+++ b/app/css/less/page.less
@@ -10,6 +10,7 @@ body {
 }
 h1,h2,h3,h4,h5 {
   font-family:@font-family-bold;
+  line-height: 1.5;
 
 }
 
