--- a/app/css/sg.less
+++ b/app/css/sg.less
@@ -22,8 +22,12 @@
   &.swatch {
     width: 100%;
     height: 100px;
-    //margin-bottom: 20px;
+    margin-bottom: 20px;
     .lh-border-radius(4);
+  }
+
+  .color-swatch > & {
+     margin-bottom: 20px;
   }
 
 }
