--- a/app/css/stylesheet.css
+++ b/app/css/stylesheet.css
@@ -21,6 +21,7 @@ h3,
 h4,
 h5 {
   font-family: 'OpenSansSemibold';
+  line-height: 1.5;
 }
 p {
   font-size: 16px;
